src/app/pages/tabs/tabs.page.scss
:host {
  /deep/.tab-cover {
    background-repeat: no-repeat;
    background-position: center;
    opacity: 0.6;
  }
  /deep/.tab-selected {
    .tab-cover {
      opacity: 1;
    }
  }
  /deep/.tab-cover[href='/tabs/(home:home)'] {
    background-image: url('assets/img/mesure.png');
  }
  /deep/.tab-cover[href='/tabs/(history:history)'] {
    background-image: url('assets/img/histo.png');
  }
  /deep/.tab-cover[href='/tabs/(settings:settings)'] {
    background-image: url('assets/img/param.png');
  }
  /deep/.tab-cover[href='/tabs/(map:map)'] {
    background-image: url('assets/img/carto.png');
  }
  /deep/.tab-cover[href='#'] {
    background-image: url('assets/img/more.png');
  }
}

.keyboard-open :host {
  /deep/ion-tabbar {
    margin-bottom: -55px;
    border-top: none;
  }
}

:host {
  /deep/ion-tabbar {
    transition: margin-bottom ease-in 200ms;
  }
}

